[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/Multiplayer/LobbyMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/Multiplayer/Chat.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/network/HolePunching.gd" type="Script" id=3]

[node name="MPLobbyMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Multiplayer"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 944.0
margin_bottom = 688.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_right = 904.0
margin_bottom = 648.0

[node name="Header" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 904.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Player List" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Header"]
margin_top = 18.0
margin_right = 66.0
margin_bottom = 32.0
text = "Player List"

[node name="StartButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Header"]
margin_left = 70.0
margin_right = 111.0
margin_bottom = 50.0
text = "Start"

[node name="ReadyButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Header"]
margin_left = 115.0
margin_right = 165.0
margin_bottom = 50.0
text = "Ready"

[node name="ExitButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/Header"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -25.0
margin_bottom = 25.0
size_flags_horizontal = 4
text = "Exit"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 904.0
margin_bottom = 648.0
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
editor/display_folded = true
self_modulate = Color( 0.6, 0.6, 0.6, 1 )
margin_right = 446.0
margin_bottom = 594.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="PlayerList" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/Panel/MarginContainer"]
margin_right = 441.0
margin_bottom = 584.0
custom_constants/separation = 10

[node name="VSeparator" type="VSeparator" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 450.0
margin_right = 454.0
margin_bottom = 594.0

[node name="Options" type="Control" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 458.0
margin_right = 904.0
margin_bottom = 594.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/Options"]
margin_right = 40.0
margin_bottom = 14.0
text = "Options"

[node name="Chat" parent="MarginContainer/Panel/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 448.0
margin_right = 888.0
margin_bottom = 648.0
rect_min_size = Vector2( 0, 200 )

[node name="HolePunching" type="Node" parent="."]
script = ExtResource( 3 )
server = true
auto_start = true

[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/Header/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/Header/ReadyButton" to="." method="_on_ReadyButton_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/Header/ExitButton" to="." method="_on_Exit_pressed"]
